Fixed a window alignment issue and added 'projects' scroll link.

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,10 @@
   color: #025;
 }
 
+a {
+  user-select: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -102,8 +106,18 @@
 .Greeting {
   font-size: 80px;
   font-weight: 700;
-  color: #D87;
+  color: #F98;
   text-shadow: 0.05em 0.05em 0 #04A;
+}
+
+.ScrollDown {
+  font-size: 16px;
+  font-weight: 700;
+  color: #04A;
+  text-shadow: 0.05em 0.05em 0 #99B;
+  text-align: center;
+  position: absolute;
+  top: 95vh;
 }
 
 /* projects */
@@ -111,7 +125,7 @@
 .Projects {
   background-color: #88A;
   background: repeating-linear-gradient( 45deg, #779, #779 5px, #88A 5px, #88A 10px );
-  min-height: 100vh;
+  min-height: 96vh;
   width: 100%;
   display: flex;
   flex-flow: row wrap; /* make it a slideshow instead (: */
@@ -147,6 +161,10 @@
 
 .GitTitle:hover, .Title:hover, .ContactLink:hover {
   text-decoration: underline;
+  cursor: pointer;
+}
+
+.ScrollDown:hover {
   cursor: pointer;
 }
 
